<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Email"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-3dp"
        android:contentDescription="@string/LoginImg"
        app:srcCompat="@drawable/image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/radius">

        <EditText
            android:id="@+id/email"
            android:layout_width="188dp"
            android:layout_height="30dp"
            android:backgroundTint="#FCC31C"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#7E7B7B"
            android:textColorHint="#FCC31C"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/layout1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/radius"
        android:soundEffectsEnabled="false">

        <EditText
            android:id="@+id/passwordEdite"
            android:layout_width="202dp"
            android:layout_height="38dp"
            android:autofillHints=""
            android:backgroundTint="#FCC31C"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:textColor="#888787"
            android:textColorHint="#FCC31C"

            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_below="@+id/layout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="100dp"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="86dp">

        <TextView
            android:id="@+id/textconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textconnect"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Seconnect"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492" />

        <ImageView
            android:id="@+id/Seconnect"
            android:layout_width="93dp"
            android:layout_height="96dp"
            android:clickable="true"
            android:contentDescription="@string/imagenext"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555"
            app:srcCompat="@drawable/bg_btn_login"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/layout1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="180dp"
        android:text="@string/textemail"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textpaswd"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_alignStart="@+id/layout2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="156dp"
        android:text="@string/textpaswd"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Oublie"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="#FFFFFFFF"
        android:text="@string/mot_de_passe_oublie"
        android:textAllCaps="false"
        android:textColor="#838282"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="107dp"
        android:layout_height="29dp"
        android:layout_below="@+id/layout3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FFFFFFFF"
        android:text="@string/s_inscrire"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FCC31C"
        tools:ignore="TextContrastCheck" />




</RelativeLayout>