<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <EditText
        android:id="@+id/passwordEdite"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:autofillHints=""
        android:backgroundTint="#FCC31C"

        android:hint="@string/entrer_le_nouveau_mot_de_passe"
        android:inputType="textPassword"
        android:textColor="#888787"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailGet"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/passwordreEentrer"
        android:layout_width="286dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:backgroundTint="#FCC31C"

        android:hint="@string/re_enter_mot_de_passe"
        android:inputType="textPassword"
        android:textColor="#888787"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdite"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ResetPasswd"
        android:layout_width="111dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FCC31C"
        android:text="@string/valideReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordreEentrer"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/EmailGet"
        android:layout_width="243dp"
        android:layout_height="33dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>